--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     the `--base-href` argument provided to `flutter build`.
   -->
 <!--  <base href="/">-->
-  <base href="/">
-<!--  <base href="https://opannapo.github.io/napotech/" />-->
+<!--  <base href="/">-->
+  <base href="https://opannapo.github.io/napotech/" />
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -36,7 +36,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "3639733884";
+    const serviceWorkerVersion = "4287840554";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
