--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     the `--base-href` argument provided to `flutter build`.
   -->
 <!--  <base href="/">-->
-<!--  <base href="/">-->
+<!-- <base href="/"> -->
   <base href="https://opannapo.github.io/napotech/" />
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Napotech">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -36,7 +36,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "4146073785";
+    const serviceWorkerVersion = "841030417";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
